Refactor the loops

--- a/index.html
+++ b/index.html
@@ -6,9 +6,8 @@
 </head>
 <body>
     <div class="container">
-        <div class="status">
-            ...
-        </div>
+        <h1>Buncha fancy class names:</h1>
+        <ul id="output"></ul>
     </div>
     <script src="./js/lib/jquery-2.1.1.min.js"></script>
     <script src="./js/loops.js"></script>
